hard-gists/6055795/run.log
=== Docker Run Log for 6055795 ===
Started at: Mi 29. Okt 16:18:48 CET 2025

[2025-10-29 16:18:49] START: Running container for 6055795
[2025-10-29 16:18:49] SUCCESS: Container 29d1fdc1c0a9a0845953ff3b3c82a02fd9ec876aa158661d155cfa396fb66576 started for 6055795
=== Container logs for 6055795 ===
  File "/snippet.py", line 33
    print yourcity
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6055795 ===
[2025-10-29 16:18:51] INFO: Container 29d1fdc1c0a9a0845953ff3b3c82a02fd9ec876aa158661d155cfa396fb66576 has stopped
